--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Coding Quiz</title>
 </head>
 <body>
-    <div class="header">
-        <p class="highscores"> View Highscores</p>
-        <p class="time"> Time:   </p>
-        <br>
-    </div>
-    <div>
-        <h1 class="title"> Coding Quiz Challenge </h1>
-        <br>
-        <h2 class="description"> Try to answer the following code-related questions within the time
-            limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
-        </h2>
-        <br>
-        <input type="button" id="start" value="Start Quiz">
+    <div class="container-fluid">
+        <nav>
+            <div>Show Highscore
+            <div>Timer: <span id="remaining-seconds"></span></div>
+            </div>
+        </nav>
+        <div id="start-page">
+            <h1>Welcome to the quiz page</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <button class="btn btn-primary" id="start-quiz-button">Start Quiz</button>
+        </div>
+        <div id="quiz-page">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuemax="100"></div>
+            </div>
+            <div id="question"></div>
+            <div id="choices-container"></div>
+        </div>
+        <div id="result-page"></div>
     </div>
 
-    
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="assets/js/questions.js"></script>  
+<script src="assets/js/main.js"></script>
 </body>
 </html>
